# Qt_Shared_Libary

Shared Libary/: CMakeLists.txt
Shared Libary/MyApp/: CMakeLists.txt  main.cpp
Shared Libary/MyLib/: CMakeLists.txt  mylib.cpp  mylib.h
